--- a/templates/conf.d/10-ssl.conf.erb
+++ b/templates/conf.d/10-ssl.conf.erb
@@ -13,8 +13,8 @@ ssl = <%= ssl %>
 # root. Included doc/mkcert.sh can be used to easily generate self-signed
 # certificate, just make sure to update the domains in dovecot-openssl.cnf
 <% if @ssl =~ /yes/ -%>
-ssl_cert = <%= ssl_cert %>
-ssl_key = <%= ssl_key %>
+ssl_cert = <<%= ssl_cert %>
+ssl_key = <<%= ssl_key %>
 <% end -%>
 
 # If key file is password protected, give the password here. Alternatively
