--- a/templates/conf.d/10-ssl.conf.erb
+++ b/templates/conf.d/10-ssl.conf.erb
@@ -5,7 +5,7 @@
 # SSL/TLS support: yes, no, required. <doc/wiki/SSL.txt>
 #ssl = yes
 <% if @ssl -%>
-ssl = <%= ssl %>
+ssl = <%= @ssl %>
 <% end -%>
 
 # PEM encoded X.509 SSL/TLS certificate and private key. They're opened before
@@ -13,8 +13,8 @@ ssl = <%= ssl %>
 # root. Included doc/mkcert.sh can be used to easily generate self-signed
 # certificate, just make sure to update the domains in dovecot-openssl.cnf
 <% if @ssl =~ /yes/ -%>
-ssl_cert = <<%= ssl_cert %>
-ssl_key = <<%= ssl_key %>
+ssl_cert = <<%= @ssl_cert %>
+ssl_key = <<%= @ssl_key %>
 <% end -%>
 
 # If key file is password protected, give the password here. Alternatively
@@ -45,5 +45,5 @@ ssl_key = <<%= ssl_key %>
 # SSL ciphers to use
 #ssl_cipher_list = ALL:!LOW:!SSLv2:!EXP:!aNULL
 <% if @ssl_cipher_list -%>
-ssl_cipher_list = <%= ssl_cipher_list %>
+ssl_cipher_list = <%= @ssl_cipher_list %>
 <% end -%>
