--- a/templates/conf.d/20-imap.conf.erb
+++ b/templates/conf.d/20-imap.conf.erb
@@ -10,7 +10,7 @@ protocol imap {
 
   # Maximum number of IMAP connections allowed for a user from each IP address.
   # NOTE: The username is compared case-sensitively.
-  mail_max_userip_connections = <%= mail_max_userip_connections %>
+  mail_max_userip_connections = <%= @mail_max_userip_connections %>
 
   # Space separated list of plugins to load (default is global mail_plugins).
   #mail_plugins = $mail_plugins
