Allow use of an lmtp socket external to dovecot

--- a/templates/conf.d/10-master.conf.erb
+++ b/templates/conf.d/10-master.conf.erb
@@ -62,6 +62,11 @@ service lmtp {
     #address =
     #port = 
   #}
+  <% if @lmtp_socket_path %>
+  unix_listener <%= @lmtp_socket_path %> {
+     #mode = 0666
+  }
+  <% end %>
 }
 
 service imap {
