--- a/templates/conf.d/auth-passwdfile.conf.ext.erb
+++ b/templates/conf.d/auth-passwdfile.conf.ext.erb
@@ -5,10 +5,18 @@
 
 passdb {
   driver = passwd-file
+  <% if @auth_passwdfile_passdb -%>
+  args = <%= @auth_passwdfile_passdb %>
+  <% else %>
   args = scheme=CRYPT username_format=%u /etc/dovecot/users
+  <% end -%>
 }
 
 userdb {
   driver = passwd-file
+  <% if @auth_passwdfile_userdb -%>
+  args = <%= @auth_passwdfile_userdb %>
+  <% else %>
   args = username_format=%u /etc/dovecot/users
+  <% end -%>
 }
