add FreeBSD support

--- a/templates/conf.d/auth-deny.conf.ext.erb
+++ b/templates/conf.d/auth-deny.conf.ext.erb
@@ -11,5 +11,5 @@ passdb {
   deny = yes
 
   # File contains a list of usernames, one per line
-  args = /etc/dovecot/deny-users
+  args = <%= @directory %>/deny-users
 }
