Added mail_location directive to lda protocol.

--- a/templates/conf.d/15-lda.conf.erb
+++ b/templates/conf.d/15-lda.conf.erb
@@ -57,4 +57,7 @@ protocol lda {
 <% if @lda_mail_plugins -%>
   mail_plugins  = <%= @lda_mail_plugins %>
 <% end -%>
+<% if @lda_mail_location -%>
+  mail_location = <%= @lda_mail_location %>
+<% end -%>
 }
