Added two directives for the pop3 login service, service_count and process_min_avail

--- a/templates/conf.d/10-master.conf.erb
+++ b/templates/conf.d/10-master.conf.erb
@@ -64,6 +64,12 @@ service pop3-login {
     #port = 995
     #ssl = yes
   }
+<% if not @pop3_login_service_count.nil? -%>
+  service_count = <%= @pop3_login_service_count %>
+<% end -%>
+<% if @pop3_login_process_min_avail -%>
+  process_min_avail = <%= @pop3_login_process_min_avail %>
+<% end -%>
 }
 
 service lmtp {
