Added include_inbox_namespace to specify inbox namespace

--- a/templates/conf.d/10-mail.conf.erb
+++ b/templates/conf.d/10-mail.conf.erb
@@ -32,6 +32,13 @@
 mail_location = <%= @mail_location %>
 <% end -%>
 
+
+<% if @include_inbox_namespace -%>
+namespace inbox {
+  inbox = yes
+}
+<% end -%>
+
 # If you need to set multiple mailbox locations or want to change default
 # namespace settings, you can do it by defining namespace sections.
 #
