Bugfix: daemon fails to start when ssl is disabled

--- a/templates/conf.d/10-ssl.conf.erb
+++ b/templates/conf.d/10-ssl.conf.erb
@@ -5,7 +5,9 @@
 # SSL/TLS support: yes, no, required. <doc/wiki/SSL.txt>
 #ssl = yes
 <% if @ssl -%>
-ssl = <%= @ssl %>
+ssl = yes
+<% else -%>
+ssl = no
 <% end -%>
 
 # PEM encoded X.509 SSL/TLS certificate and private key. They're opened before
@@ -26,7 +28,7 @@ ssl_key = <<%= @ssl_key %>
 # PEM encoded trusted certificate authority. Set this only if you intend to use
 # ssl_verify_client_cert=yes. The file should contain the CA certificate(s)
 # followed by the matching CRL(s). (e.g. ssl_ca = </etc/pki/dovecot/certs/ca.pem)
-#ssl_ca = 
+#ssl_ca =
 
 # Request client to send a certificate. If you also want to require it, set
 # auth_ssl_require_client_cert=yes in auth section.
