--- a/templates/conf.d/10-ssl.conf.erb
+++ b/templates/conf.d/10-ssl.conf.erb
@@ -14,7 +14,7 @@ ssl = no
 # dropping root privileges, so keep the key file unreadable by anyone but
 # root. Included doc/mkcert.sh can be used to easily generate self-signed
 # certificate, just make sure to update the domains in dovecot-openssl.cnf
-<% if @ssl =~ /yes/ -%>
+<% if @ssl -%>
 ssl_cert = <<%= @ssl_cert %>
 ssl_key = <<%= @ssl_key %>
 <% end -%>
