--- a/templates/conf.d/20-lmtp.conf.erb
+++ b/templates/conf.d/20-lmtp.conf.erb
@@ -10,7 +10,7 @@
 # lda_mailbox_autocreate settings.
 #lmtp_save_to_detail_mailbox = no
 <% if @lmtp_save_to_detail_mailbox -%>
-lmtp_save_to_detail_mailbox = <%= @lmtp_save_to_detail_mailbox %>
+lmtp_save_to_detail_mailbox = yes
 <% end -%>
 
 protocol lmtp {
