--- a/templates/conf.d/10-logging.conf.erb
+++ b/templates/conf.d/10-logging.conf.erb
@@ -10,9 +10,9 @@ log_path = <%= @log_path %>
 <% end -%>
 
 # Log file to use for informational messages. Defaults to log_path.
-#info_log_path = 
+#info_log_path =
 # Log file to use for debug messages. Defaults to info_log_path.
-#debug_log_path = 
+#debug_log_path =
 
 # Syslog facility to use if you're logging to syslog. Usually if you don't
 # want to use "mail", you'll use local0..local7. Also other standard
@@ -26,7 +26,7 @@ log_path = <%= @log_path %>
 # Log unsuccessful authentication attempts and the reasons why they failed.
 #auth_verbose = no
 <% if @auth_verbose -%>
-auth_verbose = <%= @auth_verbose %>
+auth_verbose = yes
 <% end -%>
 
 # In case of password mismatches, log the attempted password. Valid values are
@@ -38,7 +38,7 @@ auth_verbose = <%= @auth_verbose %>
 # queries.
 #auth_debug = no
 <% if @auth_debug -%>
-auth_debug = <%= @auth_debug %>
+auth_debug = yes
 <% end -%>
 
 # In case of password mismatches, log the passwords and used scheme so the
@@ -49,7 +49,7 @@ auth_debug = <%= @auth_debug %>
 # isn't finding your mails.
 #mail_debug = no
 <% if @mail_debug -%>
-mail_debug = <%= @mail_debug %>
+mail_debug = yes
 <% end -%>
 
 # Show protocol level SSL errors.
@@ -84,7 +84,7 @@ log_timestamp = <%= @log_timestamp %>
 # Login log format. %$ contains login_log_format_elements string, %s contains
 # the data we want to log.
 #login_log_format = %$: %s
- 
+
 # Log prefix for mail processes. See doc/wiki/Variables.txt for list of
 # possible variables you can use.
 #mail_log_prefix = "%s(%u): "
