--- a/templates/conf.d/10-mail.conf.erb
+++ b/templates/conf.d/10-mail.conf.erb
@@ -27,7 +27,7 @@
 #
 # <doc/wiki/MailLocation.txt>
 #
-#mail_location = 
+#mail_location =
 <% if @mail_location -%>
 mail_location = <%= @mail_location %>
 <% end -%>
@@ -54,11 +54,11 @@ mail_location = <%= @mail_location %>
   # Hierarchy separator to use. You should use the same separator for all
   # namespaces or some clients get confused. '/' is usually a good one.
   # The default however depends on the underlying mail storage format.
-  #separator = 
+  #separator =
 
   # Prefix required to access this namespace. This needs to be different for
   # all namespaces. For example "Public/".
-  #prefix = 
+  #prefix =
 
   # Physical location of the mailbox. This is in same format as
   # mail_location, which is also the default for it.
@@ -141,14 +141,14 @@ mail_privileged_group = <%= @mail_privileged_group %>
 # filesystems (NFS or clustered filesystem).
 #mmap_disable = no
 <% if @mmap_disable -%>
-mmap_disable = <%= @mmap_disable %>
+mmap_disable = yes
 <% end -%>
 
 # Rely on O_EXCL to work when creating dotlock files. NFS supports O_EXCL
 # since version 3, so this should be safe to use nowadays by default.
 #dotlock_use_excl = yes
 <% if @dotlock_use_excl -%>
-dotlock_use_excl = <%= @dotlock_use_excl %>
+dotlock_use_excl = yes
 <% end -%>
 
 # When to use fsync() or fdatasync() calls:
@@ -164,13 +164,13 @@ mail_fsync = <%= @mail_fsync %>
 # whenever needed. If you're using only a single mail server this isn't needed.
 #mail_nfs_storage = no
 <% if @mail_nfs_storage -%>
-mail_nfs_storage = <%= @mail_nfs_storage %>
+mail_nfs_storage = yes
 <% end -%>
 # Mail index files also exist in NFS. Setting this to yes requires
 # mmap_disable=yes and fsync_disable=no.
 #mail_nfs_index = no
 <% if @mail_nfs_index -%>
-mail_nfs_index = <%= @mail_nfs_index %>
+mail_nfs_index = yes
 <% end -%>
 
 # Locking method for index files. Alternatives are fcntl, flock and dotlock.
@@ -214,7 +214,7 @@ last_valid_uid = <%= @last_valid_uid %>
 # WARNING: Never add directories here which local users can modify, that
 # may lead to root exploit. Usually this should be done only if you don't
 # allow shell access for users. <doc/wiki/Chrooting.txt>
-#valid_chroot_dirs = 
+#valid_chroot_dirs =
 
 # Default chroot directory for mail processes. This can be overridden for
 # specific users in user database by giving /./ in user's home directory
@@ -222,7 +222,7 @@ last_valid_uid = <%= @last_valid_uid %>
 # need to do chrooting, Dovecot doesn't allow users to access files outside
 # their mail directory anyway. If your home directories are prefixed with
 # the chroot directory, append "/." to mail_chroot. <doc/wiki/Chrooting.txt>
-#mail_chroot = 
+#mail_chroot =
 
 # UNIX socket path to master authentication server to find users.
 # This is used by imap (for shared users) and lda.
@@ -233,7 +233,7 @@ last_valid_uid = <%= @last_valid_uid %>
 
 # Space separated list of plugins to load for all services. Plugins specific to
 # IMAP, LDA, etc. are added to this list in their own .conf files.
-#mail_plugins = 
+#mail_plugins =
 <% if @mail_plugins -%>
 mail_plugins = <%= @mail_plugins %>
 <% end -%>
@@ -315,7 +315,7 @@ mbox_write_locks = fcntl
 # fallbacks to re-reading the whole mbox file whenever something in mbox isn't
 # how it's expected to be. The only real downside to this setting is that if
 # some other MUA changes message flags, Dovecot doesn't notice it immediately.
-# Note that a full sync is done with SELECT, EXAMINE, EXPUNGE and CHECK 
+# Note that a full sync is done with SELECT, EXAMINE, EXPUNGE and CHECK
 # commands.
 #mbox_dirty_syncs = yes
 
