--- a/templates/conf.d/10-auth.conf.erb
+++ b/templates/conf.d/10-auth.conf.erb
@@ -100,7 +100,7 @@ auth_master_user_separator = <%= @auth_master_separator %>
 #   plain login digest-md5 cram-md5 ntlm rpa apop anonymous gssapi otp skey
 #   gss-spnego
 # NOTE: See also disable_plaintext_auth setting.
-auth_mechanisms = <%= @auth_mechanisms %>
+auth_mechanisms = <% @auth_mechanisms.each do |am| -%><%= am %> <% end -%>
 
 ##
 ## Password and user databases
