--- a/templates/conf.d/90-plugin.conf.erb
+++ b/templates/conf.d/90-plugin.conf.erb
@@ -8,8 +8,13 @@
 
 plugin {
   #setting_name = value
-<% if @fts_lucene -%>
-  fts = lucene
+<% if @fts -%>
+  fts = <%= @fts.join(' ') %>
+<% if @fts.include? 'squat' -%>
+  fts_squat = partial=4 full=10
+<% end -%>
+<% if @fts.include? 'lucene' -%>
   fts_lucene = whitespace_chars=@.
+<% end -%>
 <% end -%>
 }
