add mail_home parameter to 10-mail.conf.erb

--- a/templates/conf.d/10-mail.conf.erb
+++ b/templates/conf.d/10-mail.conf.erb
@@ -32,6 +32,10 @@
 mail_location = <%= @mail_location %>
 <% end -%>
 
+# mail_home = 
+<% if @mail_home -%>
+mail_home = <%= mail_home %>
+<% end -%>
 
 <% if @include_inbox_namespace -%>
 namespace inbox {
