add imaps_listen_port to 20-imap.conf

--- a/templates/conf.d/20-imap.conf.erb
+++ b/templates/conf.d/20-imap.conf.erb
@@ -4,6 +4,10 @@
 
 protocol imap {
   listen = <%= imap_listen_port %>
+  <% if @ssl =~ /yes/ %>
+  ssl_listen = <%= imaps_listen_port %>
+  <% end %>
+  
   # Maximum IMAP command line length. Some clients generate very long command
   # lines with huge mailboxes, so you may need to raise this if you get
   # "Too long argument" or "IMAP command line too large" errors often.
