--- a/templates/conf.d/auth-ldap.conf.ext.erb
+++ b/templates/conf.d/auth-ldap.conf.ext.erb
@@ -17,13 +17,19 @@ passdb {
 #}
 
 userdb {
+<% if @auth_ldap_userdb_static -%>
+  driver = static
+  args = <%= @auth_ldap_userdb_static %>
+<% else -%>
   driver = ldap
   args = <%= @directory %>/dovecot-ldap.conf.ext
+<% end -%>
 }
 
 # If you don't have any user-specific settings, you can avoid the userdb LDAP
 # lookup by using userdb static instead of userdb ldap, for example:
 # <doc/wiki/UserDatabase.Static.txt>
+
 #userdb {
   #driver = static
   #args = uid=vmail gid=vmail home=/var/vmail/%u
