ssl_protocols in 10-ssl.conf [to disable SSLv3]

--- a/templates/conf.d/10-ssl.conf.erb
+++ b/templates/conf.d/10-ssl.conf.erb
@@ -47,3 +47,7 @@ ssl_key = <<%= @ssl_key %>
 <% if @ssl_cipher_list -%>
 ssl_cipher_list = <%= @ssl_cipher_list %>
 <% end -%>
+
+<% if @ssl_protocols -%>
+ssl_protocols = <%= @ssl_protocols %>
+<% end -%>
